--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 			<input type="submit" name="submit" id="submit" value="Submit">
 		</form>
 	</div>
+	<div><a href="session5.html">Session 5</a></div>
 </body>
 </html>
